Add Cancel button logic and end time display

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
                     <p>:</p>
                     <p class="s">0</p>
                 </div>
-                <p class="endTime"></p>
+                <div id="endTime">
+                    <img src="./alarm-icon.png" alt="alarm icon">
+                    <p class="endTime"></p>
+                </div>
             </div>            
         </div>
         <div class="btn">
